<resources>
    <string name="app_name">App name</string>
    <string name="bank_account">Bank account</string>
    <string name="account_number">Account number</string>
    <string name="name_of_the_account">Name of the account</string>
    <string name="account_name">Account name</string>
    <string name="bank_account_name">Bank account name</string>
    <string name="_number">0123456789</string>
    <string name="delete_card">Delete card</string>
    <string name="add_bank_account">Add Bank account</string>
    <string name="add">Add</string>
    <string name="add_card">Add card</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="payment_info">only one needs to be filed (either cart or bank account) to create your account</string>
    <string name="create">Create</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create account</string>
    <string name="first_name">First name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="middel_name">Middel name</string>
    <string name="optional">Optional</string>
    <string name="enter_middle_name">Enter middel name</string>
    <string name="last_name">Last name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="profile_picture">Profile picture</string>
    <string name="chose_a_profile_picture">chose a profile picture</string>
    <string name="shows_account_ico">shows_account_ico</string>
    <string name="user_name">User name</string>
    <string name="card">Card</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="create_password">Create a password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_page_info">Please enter the email address you’d like your pass - word rest information sent to</string>
    <string name="reset_password">Reset password</string>
    <string name="user_email">UserName@Email.com</string>
    <string name="phone_number_input">+45 12 34 56 78</string>
    <string name="edit_profile">Edit profile</string>
    <string name="cards">Cards</string>
    <string name="add_account">Add account</string>
    <string name="card_number">Card number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="month_year">Month/year</string>
    <string name="CVC">Security code (CVC)</string>
    <string name="digits">3 digits</string>
    <string name="card_icon">card icon</string>
    <string name="visa_debut_card">Visa/debut card</string>
    <string name="card_numbers">****1234</string>
    <string name="expires">expires</string>
    <string name="month_year_numbers">01/23</string>
    <string name="delete_info">Are you sure you want to delete payment method</string>
    <string name="leave_info">you are about to leave with out saving your changes do you want to leave</string>
    <string name="logo">logo\n</string>


    <!--    Auth0-->
    <string name="auth0_scheme">app</string>
    <string name="auth0_domain">dev-0o0gcvm7d4ul8b2u.eu.auth0.com</string>
    <string name="com_auth0_client_id">5LIXAuSwDdBXI6b9wct9wXerbpKcr7Pc</string>

    <!--    Firebase-->
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="default_notification_channel_name">default_notification_channel_name</string>
</resources>