<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    style="@style/PaymentBox">



    <ImageView
        android:id="@+id/Card_icon"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/card_icon"
        android:contentDescription="@string/card_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:layout_marginTop="10dp"
        android:elevation="4dp"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/Card_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visa_debut_card"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Card_icon"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/Card_number_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_numbers"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/Card_type"
        app:layout_constraintStart_toEndOf="@+id/Card_icon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/Expiration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expires"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/Card_type"
        app:layout_constraintStart_toEndOf="@+id/Card_number_item"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/Expiration_date_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_year_numbers"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/Card_type"
        app:layout_constraintStart_toEndOf="@id/Expiration_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="4dp"
        />

    <Button
        android:id="@+id/Delete_button"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:text="@string/delete_card"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        android:background="@drawable/dark_green_box"
        android:textAllCaps="false"
        android:elevation="4dp"
        android:shadowColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        tools:ignore="SmallSp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>