<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Forgot_password">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        />

    <View
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_MarginTop="40dp"
        />

    <TextView
        android:id="@+id/forgot_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/robot_condensed_family"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        />

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/robot_condensed_family"
        android:text="@string/email_page_info"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/forgot_your_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/Enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_address"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/information"
        app:layout_constraintStart_toStartOf="@id/information"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/Email"
        android:layout_width="240dp"
        android:layout_height="33dp"
        android:autofillHints="emailAddress"
        android:paddingStart="15dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        android:textSize="20sp"
        android:background="@drawable/light_green_box"
        app:layout_constraintTop_toBottomOf="@+id/Enter_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:elevation="4dp"
        android:shadowColor="@color/darkGreen"
        android:inputType="text"
        tools:ignore="RtlSymmetry,TextFields"
        />

    <Button
        android:id="@+id/Reset_password"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        android:background="@drawable/light_green_box"
        android:backgroundTint="@color/lightGreen"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintStart_toStartOf="@+id/app_title"
        app:layout_constraintEnd_toEndOf="@+id/app_title"
        android:layout_marginTop="30dp"
        android:elevation="4dp"
        android:shadowColor="@color/darkGreen"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>