<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Edit_profile">

    <TextView
        android:id="@+id/First_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/First_name_input"
        android:layout_width="240dp"
        android:layout_height="33dp"
        android:autofillHints="first name"
        android:inputType="text"
        android:paddingStart="15dp"
        android:hint="@string/enter_last_name"
        android:textColorHint="@color/white"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        android:textSize="20sp"
        android:background="@drawable/light_green_box"
        app:layout_constraintTop_toBottomOf="@+id/First_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:elevation="4dp"
        android:shadowColor="@color/darkGreen"
        tools:ignore="RtlSymmetry"
        />

    <TextView
        android:id="@+id/Middle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_middle_name"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/First_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optional"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/First_name_input"
        app:layout_constraintStart_toEndOf="@+id/Middle_name"
        app:layout_constraintTop_toTopOf="0dp"
        android:layout_marginTop="36dp"
        tools:ignore="SmallSp"
        />

    <EditText
        android:id="@+id/Middle_name_input"
        android:layout_width="240dp"
        android:layout_height="33dp"
        android:autofillHints="middle name"
        android:paddingStart="15dp"
        android:hint="@string/enter_middle_name"
        android:textColorHint="@color/white"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        android:textSize="20sp"
        android:background="@drawable/light_green_box"
        app:layout_constraintTop_toBottomOf="@+id/Middle_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:elevation="4dp"
        android:shadowColor="@color/darkGreen"
        android:layout_marginTop="0dp"
        android:inputType="text"
        tools:ignore="RtlSymmetry"
        />

    <TextView
        android:id="@+id/Last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/Middle_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/Last_name_input"
        android:layout_width="240dp"
        android:layout_height="33dp"
        android:autofillHints="last name"
        android:paddingStart="15dp"
        android:hint="@string/enter_last_name"
        android:textColorHint="@color/white"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        android:textSize="20sp"
        android:background="@drawable/light_green_box"
        app:layout_constraintTop_toBottomOf="@+id/Last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:elevation="4dp"
        android:shadowColor="@color/darkGreen"
        android:layout_marginTop="0dp"
        android:inputType="text"
        tools:ignore="RtlSymmetry"
        />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/Last_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/Email_input"
        android:layout_width="240dp"
        android:layout_height="33dp"
        android:autofillHints="emailAddress"
        android:paddingStart="15dp"
        android:hint="@string/enter_email_address"
        android:textColorHint="@color/white"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        android:textSize="20sp"
        android:background="@drawable/light_green_box"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:elevation="4dp"
        android:shadowColor="@color/darkGreen"
        android:layout_marginTop="0dp"
        android:inputType="text"
        tools:ignore="RtlSymmetry,TextFields"
        />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/Email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/Phone_number_input"
        android:layout_width="240dp"
        android:layout_height="33dp"
        android:autofillHints="phone"
        android:paddingStart="15dp"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@color/white"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        android:textSize="20sp"
        android:background="@drawable/light_green_box"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:elevation="4dp"
        android:shadowColor="@color/darkGreen"
        android:layout_marginTop="0dp"
        android:inputType="phone"
        tools:ignore="RtlSymmetry,TextFields"
        />

    <TextView
        android:id="@+id/Profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/Phone_number_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:id="@+id/Profile_picture_input"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/Profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/chose_a_profile_picture"
        />

    <TextView
        android:id="@+id/Optional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optional"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/Phone_number_input"
        app:layout_constraintStart_toEndOf="@+id/Profile_picture"
        app:layout_constraintTop_toTopOf="0dp"
        android:layout_marginTop="36dp"
        tools:ignore="SmallSp"
        />

    <Button
        android:id="@+id/Next_button"
        android:layout_width="93dp"
        android:layout_height="33dp"
        android:background="@drawable/light_green_box"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/robot_condensed_family"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:elevation="4dp"
        android:shadowColor="@color/darkGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>